# phone_validator_library

./: README.md  pyproject.toml
tests/: test_validator.py
uzb_phone_validator/: __init__.py  validator.py
uzb_phone_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
